# chatbot

./: .gitignore  docker-compose.yaml  package-lock.json  package.json
data/surrealdb/surreal.db/: IDENTITY  MANIFEST-000005
fast-api/: Dockerfile  main.py  pyproject.toml
fast-api/database/: sessions.db
fast-api/features/agents/: models.py  prompt.py
fast-api/features/agents/marketing_agent/: agent.py  prompt.py
fast-api/shared/database/: database_connection.py
fast-api/shared/lib/: agent_runner.py  transcription.py  tts.py
fast-api/shared/orm/: orm_entity.py  orm_repository.py
fast-api/shared/orm/entities/: synthetic_text.py
fast-api/shared/orm/repositories/: synthetic_text_repository.py
fast-api/static/: index.html
sveltekit/: Dockerfile  package-lock.json  package.json
sveltekit/.svelte-kit/: ambient.d.ts
sveltekit/.svelte-kit/types/: route_meta_data.json
sveltekit/.svelte-kit/types/src/routes/api/chat/message/: $types.d.ts
sveltekit/.svelte-kit/types/src/routes/api/chat/session/: $types.d.ts
sveltekit/.svelte-kit/types/src/routes/chat/: $types.d.ts
sveltekit/src/: app.css  app.html
sveltekit/src/lib/: chatLogic.js  chatLogic.svelte.js
sveltekit/src/lib/components/: ChatInterface.svelte  SessionSidebar.svelte
sveltekit/src/lib/server/: vertex_ai_client.js
sveltekit/src/routes/: +page.svelte
sveltekit/src/routes/api/chat/message/: +server.js
sveltekit/src/routes/api/chat/session/: +server.js
sveltekit/src/routes/chat/: +page.server.js  +page.svelte
