[project]
name = "fast-api"
version = "0.1.0"
description = "Python API for IA stuff"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "python-dotenv>=1.1.0",
    "sentry-sdk>=2.27.0",
    "unicorn>=2.1.3",
    "unidecode>=1.3.8",
]

[project.optional-dependencies]
dev = [
  "debugpy>=1.6.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "features*"]
